name:                profview
version:             0.1.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Yuras Shumovich
maintainer:          shumovichy@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable profview
  main-is:             Main.hs
  other-modules:       Parse
                       Entry
                       TreeStore
                       UI
  -- other-extensions:    
  build-depends:       base >=4 && <5
                     , bytestring
                     , text
                     , vector
                     , containers
                     , scanner
                     , glib
                     , gtk3
  hs-source-dirs:      src
  default-language:    Haskell2010
